tests/compile_failure/src/Core/FloatingPoint.int.fail.cpp
#include <Phi/Core/FloatingPoint.hpp>

int main()
{
    phi::FloatingPoint<int> f{3};
}
